need to fix spacing next commmit

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,10 +12,6 @@ body {
 	padding-right: 20px;
 }
 
-::-webkit-scrollbar { 
-    display: none; 
-}
-
 #cover {
   width: 100%;
   height: 100vh;
